Sending an email attachment and showing image.

--- a/app/src/main/res/layout/fragment_add_high_score.xml
+++ b/app/src/main/res/layout/fragment_add_high_score.xml
@@ -7,18 +7,21 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_high_score" />
+        android:text="@string/add_high_score"
+        android:layout_weight="0" />
     <ImageButton
         android:id="@+id/image_preview"
         android:background="@color/app_primary"
         android:src="@drawable/ic_image_camera_alt"
         android:layout_width="match_parent"
-        android:layout_height="100dp" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
     <EditText
         android:id="@+id/initials_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/initials"/>
+        android:hint="@string/initials"
+        android:layout_weight="0" />
     <EditText
         android:id="@+id/game_title_text"
         android:layout_width="wrap_content"
