--- a/app/src/main/res/layout/fragment_add_high_score.xml
+++ b/app/src/main/res/layout/fragment_add_high_score.xml
@@ -11,7 +11,7 @@
         android:layout_weight="0" />
     <ImageButton
         android:id="@+id/image_preview"
-        android:background="@color/app_primary"
+        android:background="@color/primary"
         android:src="@drawable/ic_image_camera_alt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
