--- a/app/src/main/res/layout/recycler_view_with_fab.xml
+++ b/app/src/main/res/layout/recycler_view_with_fab.xml
@@ -16,9 +16,9 @@
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
         android:src="@drawable/ic_content_add"
-        fab:fab_colorNormal="@color/app_primary"
-        fab:fab_colorPressed="@color/app_primary_pressed"
-        fab:fab_colorRipple="@color/app_ripple"
+        fab:fab_colorNormal="@color/primary"
+        fab:fab_colorPressed="@color/primary_dark"
+        fab:fab_colorRipple="@color/primary_dark"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
