--- a/app/src/main/res/layout/list_item_high_score.xml
+++ b/app/src/main/res/layout/list_item_high_score.xml
@@ -4,7 +4,25 @@
     android:layout_height="match_parent"
     android:padding="@dimen/padding">
     <TextView
-        android:id="@+id/high_score_text"
+        android:id="@+id/game_title_text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:id="@+id/initials_text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:id="@+id/player_name_text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
+    <TextView
+        android:id="@+id/score_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
