--- a/app/src/main/res/layout/fragment_add_high_score.xml
+++ b/app/src/main/res/layout/fragment_add_high_score.xml
@@ -22,28 +22,44 @@
         android:id="@+id/game_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/game_title"/>
+        android:hint="@string/game_title"
+        android:inputType="textCapSentences"
+        android:imeOptions="actionNext"
+        android:lines="1"/>
     <EditText
         android:id="@+id/initials_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/initials"
-        android:layout_weight="0" />
+        android:layout_weight="0"
+        android:inputType="textCapCharacters"
+        android:imeOptions="actionNext"
+        android:lines="1" />
     <EditText
         android:id="@+id/player_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/your_name"
-        android:layout_weight="0" />
+        android:layout_weight="0"
+        android:inputType="textPersonName"
+        android:imeOptions="actionNext"
+        android:lines="1"/>
     <EditText
         android:id="@+id/score_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="@string/high_score"
-        android:layout_weight="0" />
+        android:layout_weight="0"
+        android:inputType="number"
+        android:imeOptions="actionDone"
+        android:lines="1"/>
     <Button
         android:id="@+id/send_email_button"
         android:text="Submit High Score"
+        android:background="@color/primary"
+        android:textColor="@color/primary_text"
+        android:padding="@dimen/padding"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
 </LinearLayout>
