--- a/app/src/main/res/layout/list_item_high_score.xml
+++ b/app/src/main/res/layout/list_item_high_score.xml
@@ -3,28 +3,38 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/game_title_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="game title" />
     <TextView
         android:id="@+id/initials_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="initials" />
     <TextView
         android:id="@+id/player_name_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="player name" />
     <TextView
         android:id="@+id/score_text"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="999" />
+    <TextView
+        android:id="@+id/date_text"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="12/19/1986" />
 </LinearLayout>
