--- a/app/src/main/res/layout/list_item_high_score.xml
+++ b/app/src/main/res/layout/list_item_high_score.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/padding">
-    <ImageView
+    <com.parse.ParseImageView
         android:id="@+id/icon"
         android:layout_width="100dp"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/game_title_text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:paddingRight="@dimen/padding"/>
+    <LinearLayout
+        android:id="@+id/label_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="game title" />
-    <TextView
-        android:id="@+id/initials_text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="initials" />
-    <TextView
-        android:id="@+id/player_name_text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="player name" />
-    <TextView
-        android:id="@+id/score_text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="999" />
-    <TextView
-        android:id="@+id/date_text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="12/19/1986" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:layout_toRightOf="@+id/icon">
+        <TextView
+            android:id="@+id/game_title_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="game title" />
+        <TextView
+            android:id="@+id/initials_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="initials" />
+        <TextView
+            android:id="@+id/player_name_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="player name" />
+        <TextView
+            android:id="@+id/score_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="999" />
+        <TextView
+            android:id="@+id/date_text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="12/19/1986" />
+    </LinearLayout>
+</RelativeLayout>
