--- a/app/src/main/res/layout/recycler_view_with_fab.xml
+++ b/app/src/main/res/layout/recycler_view_with_fab.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:fab="http://schemas.android.com/apk/res-auto">
-    <android.support.v7.widget.RecyclerView
+    <ListView
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
