--- a/app/src/main/res/layout/fragment_add_high_score.xml
+++ b/app/src/main/res/layout/fragment_add_high_score.xml
@@ -11,6 +11,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/take_picture_of_high_score"
         android:layout_weight="0" />
+    <!--TODO: This button is ugly! Fix it!-->
     <ImageButton
         android:id="@+id/image_preview"
         android:background="@color/primary"
