--- a/app/src/main/res/layout/faq_item.xml
+++ b/app/src/main/res/layout/faq_item.xml
@@ -6,12 +6,17 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        card_view:cardCornerRadius="4dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/card_padding"
+        card_view:cardCornerRadius="4dp"
+        card_view:contentPadding="20dp"
+        card_view:cardUseCompatPadding="true">
         <TextView
             android:id="@+id/faq_text"
+            android:text="@string/age_restrictions"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:autoLink="web" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
