--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -25,6 +25,12 @@
         android:layout_weight=".66"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="@string/frequently_asked_questions"
+            android:padding="@dimen/padding"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/faq_view"
             android:scrollbars="vertical"
