--- a/app/src/main/res/layout/list_item_high_score.xml
+++ b/app/src/main/res/layout/list_item_high_score.xml
@@ -1,48 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/padding">
-    <com.parse.ParseImageView
-        android:id="@+id/icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:paddingRight="@dimen/padding"/>
-    <LinearLayout
-        android:id="@+id/label_container"
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toRightOf="@+id/icon">
-        <TextView
-            android:id="@+id/game_title_text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="game title" />
-        <TextView
-            android:id="@+id/initials_text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="initials" />
-        <TextView
-            android:id="@+id/player_name_text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="player name" />
-        <TextView
-            android:id="@+id/score_text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="999" />
-        <TextView
-            android:id="@+id/date_text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="12/19/1986" />
-    </LinearLayout>
+        android:padding="@dimen/card_padding"
+        card_view:cardCornerRadius="4dp"
+        card_view:contentPadding="20dp"
+        card_view:cardUseCompatPadding="true">
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+            <com.parse.ParseImageView
+                android:id="@+id/icon"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:paddingRight="@dimen/padding"/>
+            <LinearLayout
+                android:id="@+id/label_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_toRightOf="@+id/icon">
+                <TextView
+                    android:id="@+id/game_title_text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="game title" />
+                <TextView
+                    android:id="@+id/player_name_text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="player name" />
+                <TextView
+                    android:id="@+id/score_text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="999" />
+                <TextView
+                    android:id="@+id/date_text"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="12/19/1986" />
+            </LinearLayout>
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
